--- a/calc.css
+++ b/calc.css
@@ -48,6 +48,7 @@ button{
     font-size:30px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
     
 }
 .grey{
@@ -63,5 +64,34 @@ button{
      color: white;
      grid-row: 2/span2;
      grid-column: 4;
+   
+}
+
+@media only screen and (max-width: 768px){
+    .container{
+        width: 60%;
+        
+    }
+    button{
+        font-size: 25px;
+    }
+    #screenDisplay{
+        font-size: 25px;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .container{
+        width: 70%;
+       
+        
+    }
+    button{
+        font-size: 20px;
+      
+    }
+    #screenDisplay{
+        font-size: 20px;
+    }
    
 }
